Changes in version 0.6.2
------------------------

* Fix for thread leak in ConcurrentEvolutionEngine (ISSUE#16).  Added a
  finalizer to shutdown the thread pool in FitnessEvaluationWorker so that the
  active threads do not inhibit garbage collection.

Changes in version 0.6.1
------------------------

* Added getSatisfiedTerminationConditions() method to the EvolutionEngine
  interface.  This makes it easier to determine which TerminationCondition
  caused the evolution to stop (ISSUE#13).

* Improvements to the genetic programming example application.

* Made StatusBar component public so that it can be used independently of the
  Evolution Monitor.

* Converted applet-based examples so that they can also run as applications in
  JFrames.

* Introduced Launcher class so that examples can be run easily from the command
  line.

* Changed the Mona Lisa example to accept the URL of an alternate image when
  run from the command line.

* Moved NullFitnessEvaluator from interactive package to framework package and
  made it package scope.  This class is an implementation detail and should not
  be exposed by the API.

* Refactored the ConcurrentEvolutionEngine by moving the code that actually
  executes FitnessEvaluationTasks into a new class (FitnessEvaluationWorker).
  This modified design makes it easy to distribute the fitness evaluations
  using Terracotta (http://www.terracotta.org).

* Documented the restriction that fitness scores are not allowed to be
  negative.  Made sure that the framework throws an appropriate, informative
  exception if a negative fitness is encountered (ISSUE#15).

* Documented potential pitfall with using EvolutionObservers to update Swing
  GUIs (ISSUE#14).


Changes in version 0.6.0
------------------------

* Added the option to view only the most recent 200 generations on the
  population fitness graph of the evolution monitor.

* Fixed a bug that prevented the population fitness view from being reset
  between runs.
